# actix-web

./: .gitignore  README.md
placex-web-service/: Cargo.toml
placex-web-service/model/: Cargo.toml
placex-web-service/model/src/: lib.rs
placex-web-service/src/: lib.rs  main.rs  route.rs
placex-web-service/src/dto/: mod.rs
placex-web-service/src/route/: State.rs
