[package]
name = "placex_web_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
placex_model = { path = "./model" }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
futures = "0.3"
